; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_vf.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_vf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_property = type { i32 }

@STREAM_VIDEO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.m_property*, i32, i8*)* @mp_property_vf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_property_vf(i8* %0, %struct.m_property* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.m_property*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.m_property* %1, %struct.m_property** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load %struct.m_property*, %struct.m_property** %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = load i8*, i8** %8, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i32, i32* @STREAM_VIDEO, align 4
  %14 = call i32 @property_filter(%struct.m_property* %9, i32 %10, i8* %11, i8* %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @property_filter(%struct.m_property*, i32, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
